--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.22"
+  },
+  "dependencies": {
+    "morgan": "^1.10.0"
   }
 }
