--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "nodemon": "^2.0.22"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "colors": "^1.4.0",
     "morgan": "^1.10.0"
   }
 }
