--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
-    "morgan": "^1.10.0"
+    "express-session": "^1.17.3",
+    "morgan": "^1.10.0",
+    "pg": "^8.11.0"
   }
 }
