--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,8 +16,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "colors": "^1.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
     "express-session": "^1.17.3",
+    "formidable": "^3.4.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.11.0"
   }
 }
