--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.1",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
