--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{  
   "name": "client",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +12,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start-client": "react-scripts start",
+    "start":"npm run build && cd server && npm start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
