--- a/package.json
+++ b/package.json
@@ -9,11 +9,25 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.134",
+    "@mui/material": "^5.13.6",
+    "@mui/x-date-pickers": "^6.9.0",
+    "@reduxjs/toolkit": "^1.9.5",   
+    "axios": "^1.4.0",
+    "dayjs": "^1.11.8",
+    "formik": "^2.4.2",    
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.11.1",   
+    "react-scroll-to-top": "^3.0.0"    
   },
   "scripts": {
     "start-client": "react-scripts start",
-    "start":"npm run build && cd server && npm start",
+    "start":"npm run build && cd server && npm install && npm start",
+    "dev":"npm run build && cd server && npm install && nodemon app.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
