--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,30 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {    
+    "nodemon": "^2.0.22"
+  }, 
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "*",
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.37.1",
+    "colors": "^1.4.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.4",
+    "express-jwt": "^8.4.1",
+    "express-session": "^1.17.3",
+    "formidable": "^3.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "pg": "^8.11.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.32.1",
+    "session-file-store": "^1.5.0"
   }
 }
