--- a/package.json
+++ b/package.json
@@ -22,28 +22,7 @@
     "formik": "^2.4.2",    
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",   
-    "react-scroll-to-top": "^3.0.0",
-    "express": "*",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.2",
-    "cloudinary": "^1.37.1",
-    "colors": "^1.4.0",
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "dotenv": "^16.1.4",
-    "express-jwt": "^8.4.1",
-    "express-session": "^1.17.3",
-    "formidable": "^3.4.0",
-    "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.1",
-    "passport": "^0.6.0",
-    "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "pg": "^8.11.0",
-    "pg-hstore": "^2.3.4",
-    "sequelize": "^6.32.1",
-    "session-file-store": "^1.5.0"    
+    "react-scroll-to-top": "^3.0.0"   
   },
   "scripts": {
     "start-client": "react-scripts start",
