--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {    
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "morgan": "^1.10.0"
   }, 
   "dependencies": {
     "express": "*",
@@ -24,8 +25,7 @@
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "formidable": "^3.4.0",
-    "jsonwebtoken": "^9.0.0",
-    "morgan": "^1.10.0",
+    "jsonwebtoken": "^9.0.0",   
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
