--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "axios": "^1.4.0",
+        "connect-pg-simple": "^9.0.0",
         "dayjs": "^1.11.8",
+        "express-session": "^1.17.3",
         "formik": "^2.4.2",
+        "passport-local": "^1.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.5",
