--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "body-parser": "^1.20.2",
     "cloudinary": "^1.37.1",
     "colors": "^1.4.0",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
