--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "client",
     "version": "0.1.0",
-    "private": true,
+    "private": true,    
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
@@ -55,6 +55,7 @@
         ]
     },
     "devDependencies": {
-        "dotenv": "^16.3.1"
+        "dotenv": "^16.3.1",
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.0-placeholder-for-preset-env.2"
     }
 }
