--- a/server/package.json
+++ b/server/package.json
@@ -26,14 +26,15 @@
     "express": "*",
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
+    "firebase-admin": "^12.0.0",
     "formidable": "^3.4.0",
     "imagekit": "^4.1.3",
     "jsonwebtoken": "^9.0.0",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.6.0",
+    "passport-google-oidc": "^0.1.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "passport-google-oidc": "^0.1.0",
     "pg": "^8.11.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.32.1",
